load("@rules_cc//cc:defs.bzl", "cc_library")

_public_hdrs = [
    "include/boost/*.hpp",
    "include/boost/range/*.hpp",
    "include/boost/range/adaptor/*.hpp",
    "include/boost/range/algorithm/*.hpp",
    "include/boost/range/algorithm_ext/*.hpp",
]

cc_library(
    name = "range_internal",
    hdrs = glob(["include/boost/**/*.hpp"], exclude = _public_hdrs),
)

cc_library(
    name = "range",
    visibility = ["//visibility:public"],
    includes = ["include"],
    hdrs = glob(_public_hdrs),
    deps = [
        ":range_internal",
        "@boost//concept_check",
        "@boost//iterator",
        "@boost//tuple",
        "@boost//mpl",
        "@boost//config",
        "@boost//type_traits",
        "@boost//utility",
    ],
)
